--- a/undefined/my-first-blog/index.html
+++ b/undefined/my-first-blog/index.html
@@ -477,7 +477,7 @@ categories:</p>
 <h1>就这？</h1>
 </li>
 </ul>
-<p>主要博客对我来说只是用来自嗨的，偶尔拿来记录一下生活嘛，指不定自己以后看到这些会有别的想法。正好现在临近中秋，有这个时间来迈出第一步，后面坚持一个星期整一篇出来，加油吧ヾ(≧▽≦*)o。</p>
+<p>指不定自己以后看到这些会有别的想法。正好现在临近中秋，有这个时间来迈出第一步，后面坚持一个星期整一篇出来，加油吧ヾ(≧▽≦*)o。</p>
 
 
         <hr>
